--- a/index.html
+++ b/index.html
@@ -2,14 +2,32 @@
 <html>
 <head>
     <title>Excursion</title>
-    <link rel="stylesheet" href="resources/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 
 <body>
     <header>
         <h1>Discover hidden places in the world around you</h1>
     </header>
+
+    <a href="">Download Excursion (Coming soon)</a>
+    <p><video src="resources/images+videos/excursion.mp4"></video></p>
+
+<header>
+    <h1>Your personal travel guide</h1>
+</header>
+
+<article>
+    <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+</article>
+
+       <p><img src="resources/images+videos/camp.jpeg" alt="Camp"></p>
+       <p> <img id="phone" src="resources/images+videos/phone.webp" alt="Picture of a phone"></p>
+    
+       <header>
+        <h1>Coming Soon for iphone and Android</h1>
+    </header>
+
     <a href="">Download Excursion (Coming soon)</a>
 </body>
-
 </html>
