Final changes added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p><video src="resources/images+videos/excursion.mp4"></video></p>
 
 <header>
-    <h1>Your personal travel guide</h1>
+    <h2>Your personal travel guide</h2>
 </header>
 
 <article>
@@ -25,9 +25,13 @@
        <p> <img id="phone" src="resources/images+videos/phone.webp" alt="Picture of a phone"></p>
     
        <header>
-        <h1>Coming Soon for iphone and Android</h1>
+        <h2>Coming Soon for iphone and Android</h2>
     </header>
 
     <a href="">Download Excursion (Coming soon)</a>
+
+    <footer>
+        <p class="footer">© Excursion</p>
+    </footer>
 </body>
 </html>
