Fixed bug where the video would not play

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
         <h1>Discover hidden places in the world around you</h1>
     </header>
 
-    <a href="">Download Excursion (Coming soon)</a>
-    <p><video src="resources/images+videos/excursion.mp4"></video></p>
+    <p><a href="">Download Excursion (Coming soon!)</a></p>
+
+    <video src="resources/images+videos/excursion (1).mp4" autoplay loop muted>
+        Video not supported
+    </video>
+  
 
 <header>
     <h2>Your personal travel guide</h2>
@@ -28,7 +32,7 @@
         <h2>Coming Soon for iphone and Android</h2>
     </header>
 
-    <a href="">Download Excursion (Coming soon)</a>
+    <a href="">Download Excursion (Coming soon!)</a>
 
     <footer>
         <p class="footer">© Excursion</p>
